--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2024"
 [dependencies]
 serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
 tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
-
+dotenv = "0.15.0"
